@@ -1,5 +1,10 @@
 2005-07-05  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
 
+        * src/termview.cpp (CTermView::DrawChar)
+	Enable drawing one double-byte character with two different colors.
+
+2005-07-05  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
+
 	* src/termview.cpp (CTermView::SetFontFamily)
 	Recalculate font size when font family is changed.
 
